--- a/easypan=java/src/main/resources/application.properties
+++ b/easypan=java/src/main/resources/application.properties
@@ -1,59 +1,59 @@
-# 应用服务 WEB 访问端口
+# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
 server.port=7090
 server.servlet.context-path=/api
 spring.application.name=easypan
-#session过期时间 60M 一个小时
+#session\u8FC7\u671F\u65F6\u95F4 60M \u4E00\u4E2A\u5C0F\u65F6
 server.servlet.session.timeout=PT60M
-# 处理favicon
+# \u5904\u7406favicon
 spring.mvc.favicon.enable=false
 
-# 异常处理
+# \u5F02\u5E38\u5904\u7406
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-# 数据库配置
+# \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://localhost:3306/easypan?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-# 发送邮件配置相关
-# 配置邮件服务器的地址 smtp.163.com
+# \u53D1\u9001\u90AE\u4EF6\u914D\u7F6E\u76F8\u5173
+# \u914D\u7F6E\u90AE\u4EF6\u670D\u52A1\u5668\u7684\u5730\u5740 smtp.163.com
 spring.mail.host=smtp.163.com
-# 配置邮件服务器的端口
+# \u914D\u7F6E\u90AE\u4EF6\u670D\u52A1\u5668\u7684\u7AEF\u53E3
 spring.mail.port=465
-# 配置用户的账号
+# \u914D\u7F6E\u7528\u6237\u7684\u8D26\u53F7
 spring.mail.username=13760831277@163.com
-# 配置用户的密码
+# \u914D\u7F6E\u7528\u6237\u7684\u5BC6\u7801
 spring.mail.password=PAPQMFLGPZIIEPBJ
-# 配置默认编码
+# \u914D\u7F6E\u9ED8\u8BA4\u7F16\u7801
 spring.mail.default-encoding=UTF-8
-# SSL 连接配置
+# SSL \u8FDE\u63A5\u914D\u7F6E
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-# 开启 debug，这样方便开发者查看邮件发送日志
+# \u5F00\u542F debug\uFF0C\u8FD9\u6837\u65B9\u4FBF\u5F00\u53D1\u8005\u67E5\u770B\u90AE\u4EF6\u53D1\u9001\u65E5\u5FD7
 spring.mail.properties.mail.debug=true
-#邮件配置结束
+#\u90AE\u4EF6\u914D\u7F6E\u7ED3\u675F
 
 spring.servlet.multipart.max-file-size=10MB
 
 spring.servlet.multipart.max-request-size=10MB
 
-#Spring redis配置
-# Redis数据库索引（默认为0）
+#Spring redis\u914D\u7F6E
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-# 连接超时时间（毫秒）
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=3000
-#项目目录
-project.folder=/home/hhd25z/code/Java/easypan-1-master/easypan=java/logs
-#日志级别配置
+#\u9879\u76EE\u76EE\u5F55
+project.folder=/home/hhd25z/code/Java/easypan/easypan=java/logs
+#\u65E5\u5FD7\u7EA7\u522B\u914D\u7F6E
 log.root.level=info
-#超级管理员id
+#\u8D85\u7EA7\u7BA1\u7406\u5458id
 admin.emails=2703001087@qq.com
 
-# prometheus服务监控
+# prometheus\u670D\u52A1\u76D1\u63A7
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show.details=always
 server.tomcat.mbeanregistry.enabled=true
