--- a/easypan=java/src/main/resources/application.properties
+++ b/easypan=java/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 # \u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.url=jdbc:mysql://localhost:3306/easypan?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/easypan1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
