（待修复）swagger可以正常显示，类前有requestmapping的控制器无法显示

--- a/easypan=java/pom.xml
+++ b/easypan=java/pom.xml
@@ -148,6 +148,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+        <!--swagger-->
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
