接口显示完全，新增对各接口的描述

--- a/easypan=java/src/main/resources/application.properties
+++ b/easypan=java/src/main/resources/application.properties
@@ -12,7 +12,7 @@ springdoc.swagger-ui.path=/doc
 # ????????
 springdoc.packagesToScan=com.easypan
 # ???url??
-springdoc.pathsToMatch=/*
+#springdoc.pathsToMatch=/*
 
 
 # \u5F02\u5E38\u5904\u7406
