文件删除逻辑修改(处于已删除状态文件可以被管理员清除,文件从回收站状态变成已删除状态会归还内存)

--- a/easypan=java/src/main/resources/application.properties
+++ b/easypan=java/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 # \u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.url=jdbc:mysql://localhost:3306/easypan?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/easypan1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
@@ -59,7 +59,7 @@ project.folder=/home/hhd25z/code/Java/easypan/easypan=java/logs
 #\u65E5\u5FD7\u7EA7\u522B\u914D\u7F6E
 log.root.level=info
 #\u8D85\u7EA7\u7BA1\u7406\u5458id
-admin.emails=testmailfordev1@163.com
+admin.emails=2703001087@qq.com
 
 # prometheus\u670D\u52A1\u76D1\u63A7
 management.endpoints.web.exposure.include=*
